<resources>
    <string name="app_name">Onbo</string>
    <string name="title_activity_bottom_navigation">APP</string>
    <string name="title_home">Restaurants</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_booking">Book</string>
    <string name="title_scanner">Scan</string>
    <string name="title_account">Account</string>
    <string name="add">ADD</string>
    <string name="rupee_symbol">₹ %1$s</string>
    <string name="rupee_symbol_to_pay">To pay   ₹ %1$s</string>
    <string name="customization_sheet_cb_format">%1$s  ₹ %2$s</string>
    <string name="customization_sheet_rg_format">%1$s  ₹ %2$s</string>
    <string name="show_number_pound_symbol"># %1$s</string>
    <string name="title_menu">Menu</string>
    <string name="title_cart">Cart</string>
    <string name="title_favourites">Favourites</string>
    <string name="title_running_order">Running</string>
    <string name="create_bell_request">Bell</string>
    <string name="restaurant_image">Restaurant image</string>
    <string name="please_wait_for_otp_complete">Enter the verification code sent to your number.</string>
    <string name="didnt_got_otp">Didn\'t get the code?</string>
    <string name="choose_an_option">Choose a dish variation.</string>
    <string name="verify_number">Verify</string>
    <string name="start_order_t2">Start Order</string>
    <string name="running_order_id">Order No #%1$s</string>
    <string name="running_order_table_no">Table No %1$s</string>
    <string name="turn_on_flashlight">Turn on Flashlight</string>
    <string name="turn_off_flashlight">Turn off Flashlight</string>
    <string name="place_qr_msg">Place QR code to scan</string>
    <string name="symbol_plus_inc_dec">+</string>
    <string name="symbol_minus_inc_dec">-</string>
    <string name="add_inc_dec">ADD</string>
    <string name="user_profile_picture">User Profile Image</string>
    <string name="title_notifications">Notifications</string>
    <string name="phone_number_2">Phone Number</string>
    <string name="password">Password</string>
    <string name="set_a_new_password">Set a new password</string>
    <string name="password_again">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="your_email_">Your email</string>
    <string name="name">Name</string>
    <string name="your_full_name">Your full name</string>
    <string name="gender_male">Guy</string>
    <string name="gender_female">Girl</string>
    <string name="auth_next">Next</string>
    <string name="resend_otp">RESEND</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lets_get_started">Let\'s start!</string>
    <string name="send_otp">Get OTP</string>
    <string name="next_step">Next</string>
    <string name="otp_sent_mobile_number">+91 %1$s</string>
    <string name="india_mobile_code">+91</string>
    <string name="go_back">Back</string>
    <string name="welcome">Welcome!</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_dine_in_home">DineInHome</string>
    <string name="dish">Dish</string>
    <string name="price">Price</string>
    <string name="qty">Qty</string>
    <string name="proceed">Proceed</string>
    <string name="total_items">TOTAL ITEMS</string>
    <string name="_0">0</string>
    <string name="to_pay">To Pay</string>
    <string name="title_activity_non_dine">NonDineActivity</string>
    <string name="any_message_you_want_to_send_to_chef">Any message you want to send to chef?</string>
    <string name="tridev_mishra">Tridev Mishra</string>
    <string name="logout">LOGOUT</string>
    <string name="my_reviews">My Reviews</string>
    <string name="my_orders">My Orders</string>
    <string name="rest_name">TdevM\'s palace</string>
    <string name="payments">Payments</string>
    <string name="profile">Profile</string>
    <string name="my_favourites">My Favourites</string>
    <string name="_919560447160_2">+919560447160</string>
    <string name="tridevtga_gmail_com">tridevtga@gmail.com</string>
    <string name="title_activity_restaurant_orders">RestaurantOrdersActivity</string>
    <string name="tab_dine_in">Dine In</string>
    <string name="tab_non_dine_in">Non Dine</string>
    <string name="close_reviews_btn">close reviews</string>
    <string name="tiramisu">Tiramisu is a popular coffee-flavoured Italian dessert. It is made of ladyfingers dipped in coffee, layered with a whipped mixture of eggs, sugar, and mascarpone cheese, flavoured with cocoa.</string>
    <string name="dish_image_review">dish_image_review</string>
    <string name="veg_non_veg">veg_non_indicator</string>
    <string name="how_many_guest">How many guest?</string>
    <string name="fetching_your_menu">Verifying your location.\nFetching Your Menu.....</string>
    <string name="finish_order">Finish Order</string>
    <string name="add_items">ADD Items</string>
    <string name="no_order_is_running_n_place_an_order">No order is running \nPlace an Order</string>
    <string name="taxes">Taxes</string>
    <string name="gst">GST</string>
    <string name="total">SUBTOTAL</string>
    <string name="subtotal">Subtotal</string>
    <string name="choose_payment_method">Choose payment method</string>
    <string name="please_choose_a_payment_method">Select payment method</string>
    <string name="cards_wallets_net_banking">Cards, Wallets, \n Net Banking</string>
    <string name="pay_by_cash">Cash \n</string>
    <string name="order_created_successfully">Order created successfully!</string>
    <string name="view_details">View details</string>
    <string name="please_make_your_payment_at_the_terminal_by_cash">Please make your payment at the terminal by cash</string>
    <string name="verification">Verification</string>
    <string name="otp_message">OTP Message</string>
    <string name="enter_6_digit_code">Enter 6 Digit Code</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="slide_1_title">Hello Food!</string>
    <string name="slide_1_desc">The easiest way to order food from your favourite restaurant!</string>
    <string name="slide_2_title">Movie Tickets</string>
    <string name="slide_2_desc">Book movie tickets for your family and friends!</string>
    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best discounts on every single service we offer!</string>
    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>
    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="intro_text_1">We know you are tired of standing in queue to order \n your favourite meal</string>
    <string name="intro_text_2_head">Scan QR to order and pay within seconds</string>
    <string name="intro_text_2">No more queues at the restaurant</string>
    <string name="intro_text_3_2">Sit back, and relax \n your food will be there on your table</string>
    <string name="intro_text_4_2">Dine in to thousands of restaurants with just one app</string>
    <string name="intro_text_3">Scan the QR to order</string>
    <string name="how_many_of_you_are_here_today">How many of you are here today?</string>
    <string name="help_n_support"><![CDATA[Help & Support]]></string>
    <string name="old_password">Old password</string>
    <string name="new_password">New Password</string>
    <string name="confirm">Confirm</string>
    <string name="change_password">Change password</string>
    <string name="email_address">Email address</string>
    <string name="full_name">Full Name</string>
    <string name="update_changes">Update Changes</string>
    <string name="edit_details">Edit Details</string>
    <string name="close_window">Close window</string>
    <string name="email_image">Email</string>
    <string name="profile_image">Profile image</string>
    <string name="spaghetti">Spaghetti</string>
    <string name="_400">$400</string>
    <string name="half">Half</string>
    <string name="policies">Policies</string>
    <string name="about">About</string>
    <string name="you_have_no_favourites">No favourites yet</string>
    <string name="fetching_your_location">Checking your presence at the premise</string>
    <string name="failed_to_verify_your_exact_location_please_retry">Unable to verify your exact location, please retry.</string>
    <string name="failed_to_verify_qr_authenticity_please_retry">Failed to verify QR Authenticity, please retry.</string>
    <string name="this_table_is_occupied_sorry_for_your_luck">Try scanning on a vacant table</string>
    <string name="image_design_random">image</string>
    <string name="items">ITEMS</string>
    <string name="ordered_on">ORDERED ON</string>
    <string name="dine_id">Dine In</string>
    <string name="food_court">Food Court</string>
    <string name="quick_serve">Quick serve</string>
    <string name="dine_in_2">DINE IN</string>
    <string name="quick_serve_2">QUICK SERVE</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="default_counter_text">1</string>
    <string name="place_order">PLACE ORDER</string>
    <string name="you_re_almost_done">You\'re almost done!</string>
    <string name="fetch_location">Proceed</string>
    <string name="fetching_location_heading">Fetching location</string>
    <string name="enable_your_location">Find my present location</string>
    <string name="enable_your_location_to_verify_your_presence">Location is required to verify your presence.</string>
    <string name="retry">Retry</string>
    <string name="oops">Oops!</string>
    <string name="seems_like_you_re_flying">Seems like you\'re flying</string>
    <string name="this_qr_doesn_t_look_good">This QR doesn\'t look good</string>
    <string name="this_table_is_already_occupied">This table is already occupied</string>
    <string name="empty_cart_hungry_stomach">Empty cart, hungry stomach?</string>
    <string name="the_master_chef_is_waiting">The master chef is waiting</string>
    <string name="yet_to_place_an_order">Yet to place an order</string>
    <string name="no_orders_yet">No orders yet</string>
    <string name="no_internet">No Internet</string>
    <string name="something_went_wrong">Oops! Something went wrong</string>
    <string name="best_minds_working">Our best minds are at work on fixing the issue</string>
    <string name="connection_broken">Seems like your connection is broken</string>
    <string name="search_your_cravings_from_the_menu">Search your cravings from the menu</string>
    <string name="say_bye_bye_to_those_old_days">Tired of standing in queues?</string>
    <string name="self_ordering_is_here">Self Ordering is here</string>
    <string name="order_from_your_table">Scan. Order. Relax.</string>
    <string name="dine_into_thousand">1 App. 1000s of Restaurants.</string>
    <string name="by_signing_up_you_agree_to_our_terms_and_that_you_have_read_our_privacy_policy_and_refund_policy">By signing up you agree to our Terms and that you have read our Privacy Policy and Refund Policy</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="others">Others</string>
    <string name="i_m_a">I\'m a</string>
    <string name="please_fill_your_details">Please fill your details to proceed</string>
    <string name="phone_number">Phone Number</string>
    <string name="_919560447160">+919560447160</string>
    <string name="hi_welcome_back">Hi ! Welcome back</string>
</resources>