<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_booking"
        android:icon="@drawable/book_plus"
        android:title="@string/title_booking" />

    <item
        android:id="@+id/navigation_scanner"
        android:icon="@drawable/qrcode_scan"
        android:title="@string/title_scanner" />
    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_mood_black_24dp"
        android:title="@string/title_account" />


    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />

</menu>
