<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="tdevm.app_ui.modules.auth.fragments.VerifyPhoneOTPFragment">


    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="128dp"
        android:layout_marginRight="128dp"
        android:contentDescription="@string/otp_message"
        app:srcCompat="@drawable/otp_2xxhdpi" />

    <LinearLayout
        android:id="@+id/linearLayout_fragment_verify_otp"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="120dp"
        android:orientation="vertical"
        android:weightSum="5">


        <TextView
            android:id="@+id/textView_please_wait"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingStart="30dp"
            android:paddingLeft="30dp"
            android:paddingEnd="0dp"
            android:paddingRight="0dp"
            android:text="@string/please_wait_for_otp_complete" />

        <TextView
            android:id="@+id/tv_otp_mobile_number"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingStart="30dp"
            android:paddingLeft="30dp"
            android:paddingEnd="0dp"
            android:paddingRight="0dp"
            android:text="@string/otp_sent_mobile_number"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_otp_view"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fontFamily="monospace"
            android:hint="@string/enter_6_digit_code"
            android:inputType="number"
            android:paddingStart="30dp"
            android:paddingLeft="30dp"
            android:paddingEnd="0dp"
            android:paddingRight="0dp"
            android:textAlignment="gravity"
            android:textSize="18sp"
            android:autofillHints="" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingStart="30dp"
                android:paddingLeft="30dp"
                android:paddingEnd="0dp"
                android:paddingRight="0dp"
                android:text="@string/didnt_got_otp" />

            <Button
                android:id="@+id/btn_otp_resend_otp"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:textColor="@color/primary_default_app"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/resend_otp" />
        </LinearLayout>

    </LinearLayout>


    <Button
        android:id="@+id/btn_otp_verify_mobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/gradient_6"
        android:text="@string/verify_number"
        android:textAllCaps="false"
        android:textColor="@color/white" />

    <ProgressBar
        android:id="@+id/progressBar_otp_view"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="519dp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/textView13"
        style="@style/Widget.AppCompat.TextView.SpinnerItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="107dp"
        android:text="@string/verification"
        android:textColor="@color/primary_default_app"
        android:textSize="20sp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="0dp" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@+id/linearLayout_fragment_verify_otp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="-120dp"
        android:scaleType="fitEnd"
        android:src="@drawable/otp_3xxhdpi"
        android:layout_alignParentRight="true" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:scaleType="fitStart"
        android:src="@drawable/otp_1xxhdpi"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="0dp" />


</RelativeLayout>
