<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_user_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".modules.auth.AuthenticationActivity">


    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nested_scroll_view_register"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:background="@drawable/gradient_7"
            android:orientation="vertical">


            <RelativeLayout
                android:id="@+id/rl_register_image_set"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageView11"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:contentDescription="@string/image_design_random"
                    android:scaleType="fitStart"
                    app:srcCompat="@drawable/register_1xxhdpi" />

                <ImageView
                    android:id="@+id/imageView13"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_alignBottom="@+id/imageView11"
                    android:layout_alignParentTop="false"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="0dp"
                    android:contentDescription="@string/image_design_random"
                    android:scaleType="fitEnd"
                    app:srcCompat="@drawable/register_2xxhdpi" />

            </RelativeLayout>

            <TextView
                android:id="@+id/textView14"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_16_dp"
                android:layout_marginTop="@dimen/default_space_32"
                android:layout_marginEnd="@dimen/size_16_dp"
                android:text="@string/hi_welcome_back"
                android:textColor="@color/heading_color"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_16_dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="@dimen/size_16_dp"
                android:text="@string/please_fill_your_details"
                android:textColor="@color/sub_heading_color"
                android:textSize="12sp" />

            <LinearLayout
                android:id="@+id/ll_2_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_16_dp"
                android:layout_marginBottom="@dimen/size_8_dp"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/size_16_dp"
                    android:layout_marginEnd="@dimen/size_16_dp"
                    android:layout_marginBottom="@dimen/size_16_dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/size_16_dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/size_4_dp"
                            android:layout_marginEnd="@dimen/size_4_dp"
                            android:layout_marginBottom="@dimen/size_4_dp"
                            android:text="@string/phone_number"
                            android:textColor="@color/sub_heading_color_light"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/tv_register_phone_number"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/size_4_dp"
                            android:layout_marginEnd="@dimen/size_4_dp"
                            android:text="@string/_919560447160"
                            android:textColor="@android:color/black" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginStart="@dimen/size_4_dp"
                            android:layout_marginEnd="@dimen/size_4_dp"
                            android:background="@color/sub_heading_color" />

                    </LinearLayout>


                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/textInputLayout_et_sign_up_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/size_8_dp"
                        android:orientation="horizontal"
                        app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">


                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/et_sign_up_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/name"
                            android:inputType="textPersonName"
                            android:textSize="14sp" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/textInputLayout_sign_up_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/size_8_dp"
                        app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">


                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/et_sign_up_email"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress"
                            android:textSize="14sp" />
                    </android.support.design.widget.TextInputLayout>


                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/textInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/size_8_dp"
                        app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">


                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/et_sign_up_password"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:textSize="14sp" />
                    </android.support.design.widget.TextInputLayout>

                    <RadioGroup
                        android:id="@+id/rg_register_fragment_gender"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"

                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/size_4_dp"
                            android:text="@string/i_m_a"
                            android:textSize="14sp" />

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/size_16_dp"
                            android:text="@string/male" />

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/size_16_dp"
                            android:text="@string/female" />

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/size_16_dp"
                            android:text="@string/others"
                            android:visibility="gone" />

                    </RadioGroup>


                </LinearLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_16_dp"
                android:layout_marginEnd="@dimen/size_16_dp"
                android:layout_marginBottom="@dimen/default_space_32">

                <TextView
                    android:id="@+id/tv_register_t_n_c"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="2"
                    android:text="@string/by_signing_up_you_agree_to_our_terms_and_that_you_have_read_our_privacy_policy_and_refund_policy"
                    android:textSize="12sp" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_8_dp"
                android:layout_marginBottom="@dimen/default_space_32"
                android:visibility="gone">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentEnd="true"
                    android:contentDescription="@string/image_design_random"
                    android:src="@drawable/register_3xxhdpi" />

            </RelativeLayout>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <ProgressBar
            android:id="@+id/progressBar_sign_up"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/size_8_dp"
            android:visibility="invisible" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_8_dp"
            android:background="@drawable/gradient_6"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/white" />


    </RelativeLayout>

</LinearLayout>